Responsive issues fix

--- a/index.html
+++ b/index.html
@@ -11,16 +11,23 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <!-- bootstrap css -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
-
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
 
+        <!-- main css -->
         <link rel="stylesheet" href="css/main.css">
 
+        <!-- responsive css -->
+        <link rel="stylesheet" href="css/responsive.css">
+
+        <!-- font awesome cdn -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
+        <!-- animate on-scroll -->
         <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
 
+        <!-- Font muli- ggole font cdn -->
         <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
@@ -31,14 +38,14 @@
         <![endif]-->
         <nav class="navbar no-margin" role="navigation">
             <div class="container-fluid container-gradient">
-                <div class="navbar-header">
+                <!-- <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                </div>
+                </div> -->
                 
                 <!-- main header area -->
                 <div class="flex-con">
@@ -46,7 +53,7 @@
                       <h1>Get help quick</h1>
                     </div>
                     <!-- Playstore section -->
-                    <div class="nav-right">
+                    <div class="nav-right flex-center">
                         <a class="navbar-brand logo-wrap" href="alertclinic.com">
                             <img class="logo" src="img/logo/AlertClinicLogo.png" alt="AlertCLinic Logo">
                         </a>
@@ -80,7 +87,7 @@
                                 </div>
                                 <div class="story-today__date">
                                     <div class="date-time">
-                                        <p class="day">Tuesday<br>24rd October, 2017</p>
+                                        <p class="day">Tuesday<br>24th October, 2017</p>
                                     </div>
                                 </div>
                                 <div class="story-today__headline">
