Fix responsive vendor bugs

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                     </div>
                                 </div>
                                 <div class="story-today__headline">
-                                    <a href="http://blog.ebolaalert.org/tech-as-a-tool-to-endpolio/">Tech as a Tool to #EndPolio</h1></a><h1>
+                                    <a href="http://blog.ebolaalert.org/tech-as-a-tool-to-endpolio/"><h1>Tech as a Tool to #EndPolio</h1></a>
                                 </div>
                                 <div class="btn-wrap">
                                     <button class="btn btn-primary no-bd pb"><a href="http://blog.ebolaalert.org/tech-as-a-tool-to-endpolio/">Read full story </a><i class="fa fa-angle-right"></i></button>
