Add epidalert about page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
         <!-- bootstrap css -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
+        
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
 
         <!-- main css -->
@@ -102,7 +103,7 @@
 
                         <div class="col-md-6">
                             <div class="btn-wrap">
-                                <button class="btn btn-primary no-bd pb pull-r">Proceed to Website <i class="fa fa-angle-right"></i></button>
+                                <button class="btn btn-primary no-bd pb pull-r"><a href="home.html">Proceed to Website </a><i class="fa fa-angle-right"></i></button>
                             </div>
 
                             <div class="social fix-bottom">
