Add epidalert about page

--- a/home.html
+++ b/home.html
@@ -272,9 +272,9 @@
                         <div class="team">
                             <p>Our Team</p>
                             <div class="flex-wrap">
-                                <div class="col-md-12">
+                                <div class="col-md-12 text-center">
                                     <!-- Profile cards -->
-                                    <div class="col-md-3">
+                                    <div class="col-md-3 w-100">
                                         <div class="profile-card">
                                             <div class="profile__img">
                                                 <img class="img-responsive" src="img/profile/lb.png" alt="">
