Update vision statement

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <!-- Latest Blog Post -->
                     <div class="row">
                         <div class="btn-wrap">
-                            <button class="btn btn-primary no-bd pb landing-btn"><a href="home.html">Proceed to Website </a><i class="fa fa-angle-right"></i></button>
+                            <button class="btn btn-primary no-bd pb landing-btn"><a href="about.html">Proceed to Website </a><i class="fa fa-angle-right"></i></button>
                         </div>
                         <div data-aos="fade-up" class="col-lg-6 col-md-6">
                             <!-- Today's Story section -->
