Update team section

--- a/about.html
+++ b/about.html
@@ -241,7 +241,7 @@
                     <div class="row">
                         <!-- Team List -->
                         <div class="team">
-                            <p>Our Team</p>
+                            <p>People of EpidAlert</p>
                             <div class="col-md-12 col-md-12 text-center flex-wrap--around">
                                 <!-- Profile cards -->
                                 <div class="col-lg-3 col-md-3">
@@ -251,7 +251,7 @@
                                         </div>
                                         <div class="profile__details">
                                             <h3>Dr. Bakare Lawal</h3>
-                                            <h5>C.E.O EpidAlert</h5>
+                                            <h5>Chief Executive Officer</h5>
                                         </div>
                                     </div>  
                                 </div> <!-- /cards -->
@@ -263,8 +263,8 @@
                                             <img class="img-responsive" src="img/profile/team-3.jpg" alt="">
                                         </div>
                                         <div class="profile__details">
-                                            <h3>Ibrahim Yekinni</h3>
-                                            <h5>Project Manager</h5>
+                                            <h3>Dr. Evbuoma Ebuwa</h3>
+                                            <h5>Public Health Analyst, Publications and Editorials</h5>
                                         </div>
                                     </div> 
                                 </div> <!-- /cards -->
@@ -276,8 +276,34 @@
                                             <img class="img-responsive" src="img/profile/team-2.jpg" alt="">
                                         </div>
                                         <div class="profile__details">
-                                            <h3>Dr. Dayo Osholowu</h3>
-                                            <h5>C.O.O. EpidAlert</h5>
+                                            <h3>Bamigbade Adenike</h3>
+                                            <h5>Content Manager</h5>
+                                        </div>
+                                    </div>
+                                </div>   <!-- /cards -->
+
+                                <!-- Profile cards -->
+                                <div class="col-lg-3 col-md-3">
+                                    <div class="profile-card">
+                                        <div class="profile__img">
+                                            <img class="img-responsive" src="img/profile/team-2.jpg" alt="">
+                                        </div>
+                                        <div class="profile__details">
+                                            <h3>Akinoso Toyosi</h3>
+                                            <h5>Front End Developer</h5>
+                                        </div>
+                                    </div>
+                                </div>   <!-- /cards -->
+
+                                <!-- Profile cards -->
+                                <div class="col-lg-3 col-md-3">
+                                    <div class="profile-card">
+                                        <div class="profile__img">
+                                            <img class="img-responsive" src="img/profile/team-2.jpg" alt="">
+                                        </div>
+                                        <div class="profile__details">
+                                            <h3>Babalola Sola</h3>
+                                            <h5>Full Stack Developer</h5>
                                         </div>
                                     </div>
                                 </div>   <!-- /cards -->
