--- a/about.html
+++ b/about.html
@@ -302,7 +302,7 @@
                                             <img class="img-responsive" src="img/profile/team-2.jpg" alt="">
                                         </div>
                                         <div class="profile__details">
-                                            <h3>Babalola Sola</h3>
+                                            <h3>Babatunde Sola</h3>
                                             <h5>Full Stack Developer</h5>
                                         </div>
                                     </div>
